--- a/docs/content/guides/dagster/branch_deployments.mdx
+++ b/docs/content/guides/dagster/branch_deployments.mdx
@@ -200,7 +200,7 @@ def clone_production_database(context):
     )
 
 
-@graph
+@job
 def clone_prod():
     clone_production_database(start=drop_database_clone())
 ```
@@ -246,13 +246,10 @@ resources = {
 Then, we can add the `clone_prod` job:
 
 ```python file=/guides/dagster/development_to_production/branch_deployments/repository_v2.py startafter=start_repository endbefore=end_repository
-branch_deployment_jobs = [clone_prod.to_job(resource_defs=resources[get_current_env()])]
 defs = Definitions(
     assets=[items, comments, stories],
     resources=resources[get_current_env()],
-    jobs=branch_deployment_jobs
-    if os.getenv("DAGSTER_CLOUD_IS_BRANCH_DEPLOYMENT") == "1"
-    else [],
+    jobs=[clone_prod] if is_branch_depl() else [],
 )
 ```
 
