--- a/docs/content/integrations/snowflake/using-snowflake-with-dagster.mdx
+++ b/docs/content/integrations/snowflake/using-snowflake-with-dagster.mdx
@@ -26,6 +26,8 @@ To complete this tutorial, you'll need:
   pip install dagster-snowflake dagster-snowflake-pandas
   ```
 
+  Dagster also supports using PySpark DataFrames with the Snowflake I/O manager. The Snowflake-PySpark I/O manager works in the same way as the Snowflake-Pandas I/O manager, 
+
 - **To gather the following information**, which is required to use the Snowflake I/O manager:
 
   - **Snowflake account name**: You can find this by logging into Snowflake and getting the account name from the URL:
