--- a/docs/content/concepts/resources.mdx
+++ b/docs/content/concepts/resources.mdx
@@ -32,20 +32,15 @@ So, why use resources?
 
 ## Defining a resource
 
-To define a resource, use the <PyObject object="resource" decorator/> decorator. Wrap a function that takes an `init_context` as the first parameter, which is an instance of <PyObject object="InitResourceContext"/>. From this function, return or yield the object that you would like to be available as a resource.
+To define a resource, extend the <PyObject object="Resource"/> class. Wrap a function that takes an `init_context` as the first parameter, which is an instance of <PyObject object="InitResourceContext"/>. From this function, return or yield the object that you would like to be available as a resource.
 
 ```python file=/concepts/resources/resources.py startafter=start_resource_example endbefore=end_resource_example
-from dagster import resource
+from dagster._config.structured_config import Resource
 
 
-class ExternalCerealFetcher:
+class ExternalCerealFetcher(Resource):
     def fetch_new_cereals(self, start_ts, end_ts):
         pass
-
-
-@resource
-def cereal_fetcher(init_context):
-    return ExternalCerealFetcher()
 ```
 
 ---
@@ -62,15 +57,15 @@ def cereal_fetcher(init_context):
 
 #### Accessing resources in software-defined assets
 
-Software-defined assets use resource keys to access resources:
+Software-defined assets specify resource dependencies by annotating the resource as a parameter to the asset function. The asset function will be passed an instance of the resource when it is executed.
 
 ```python file=/concepts/resources/resources.py startafter=start_asset_use_resource endbefore=end_asset_use_resource
 from dagster import asset
 
 
-@asset(required_resource_keys={"foo"})
-def asset_requires_resource(context):
-    do_something_with_resource(context.resources.foo)
+@asset
+def asset_requires_resource(foo: FooResource):
+    do_something_with_resource(foo)
 ```
 
 #### Providing resources to software-defined assets
@@ -127,7 +122,7 @@ def repo():
 
 #### Accessing resources in ops
 
-Like software-defined assets, ops use resource keys to access resources:
+Like software-defined assets, ops specify resource dependencies by annotating the resource as a parameter to the op function. The op function will be passed an instance of the resource when it is executed.
 
 ```python file=/concepts/resources/resources.py startafter=start_op_with_resources_example endbefore=end_op_with_resources_example
 from dagster import op
@@ -135,9 +130,9 @@ from dagster import op
 CREATE_TABLE_1_QUERY = "create table_1 as select * from table_0"
 
 
-@op(required_resource_keys={"database"})
-def op_requires_resources(context):
-    context.resources.database.execute_query(CREATE_TABLE_1_QUERY)
+@op
+def op_requires_resources(database: DatabaseResource):
+    database.execute_query(CREATE_TABLE_1_QUERY)
 ```
 
 #### Providing resources to ops
@@ -155,12 +150,8 @@ def do_database_stuff():
     op_requires_resources()
 
 
-do_database_stuff_prod = do_database_stuff.to_job(
-    resource_defs={"database": database_resource_a}
-)
-do_database_stuff_dev = do_database_stuff.to_job(
-    resource_defs={"database": database_resource_b}
-)
+do_database_stuff_prod = do_database_stuff.to_job(resource_defs={"database": database_resource_a})
+do_database_stuff_dev = do_database_stuff.to_job(resource_defs={"database": database_resource_b})
 ```
 
 Supplying resources to the <PyObject object="job" decorator />, i.e. when there aren't multiple jobs for the same graph, is also useful. For example, if you want to use an off-the-shelf resource or supply configuration in one place instead of in every op.
@@ -178,137 +169,56 @@ def do_database_stuff_job():
 
 ## Resource configuration
 
-<PyObject object="ResourceDefinition" pluralize /> can have a config schema, which
-allows you to customize behavior at runtime through run configuration.
+The attributes on a <PyObject object="Resource"  /> class act as its config schema, which allows you to customize behavior at runtime through run configuration.
 
 For example, let's say we wanted to pass a connection string to our `DatabaseConnection` resource.
 
 ```python file=/concepts/resources/resources.py startafter=start_resource_config endbefore=end_resource_config
-class DatabaseConnection:
-    def __init__(self, connection: str):
-        self.connection = connection
+from dagster._config.structured_config import Resource
 
 
-@resource(config_schema={"connection": str})
-def db_resource(init_context):
-    connection = init_context.resource_config["connection"]
-    return DatabaseConnection(connection)
+class DatabaseConnection(Resource):
+    connection: str
 ```
-
----
-
-## Context manager resources
-
-Dagster resources can serve as context managers, for scenarios where it is necessary to perform some sort of cleanup of the resource after execution. Let’s take the example of a database connection. We might want to clean up the connection once we are done using it. We can incorporate this into our resource like so:
-
-```python file=/concepts/resources/resources.py startafter=start_cm_resource endbefore=end_cm_resource
-from contextlib import contextmanager
-
-
-@resource
-@contextmanager
-def db_connection():
-    try:
-        db_conn = get_db_connection()
-        yield db_conn
-    finally:
-        cleanup_db_connection(db_conn)
-```
-
-At spinup time, Dagster will run the code within the try block, and be expecting a single yield. Having more than one yield will cause an error. The yielded object will be available to code that requires the resource:
-
-```python file=/concepts/resources/resources.py startafter=start_cm_resource_op endbefore=end_cm_resource_op
-@op(required_resource_keys={"db_connection"})
-def use_db_connection(context):
-    db_conn = context.resources.db_connection
-    ...
-```
-
-Once execution finishes, the finally block of the resource init function will run. In the case of our db_connection resource, this will run the cleanup function.
-
-An important nuance is that resources are initialized (and torn down) once per process. This means that if using the in-process executor, which runs all steps in a single process, resources will be initialized at the beginning of execution, and torn down after every single step is finished executing. In contrast, when using the multiprocess executor (or other out-of-process executors), where there is a single process for each step, at the beginning of each step execution, the resource will be initialized, and at the end of that step’s execution, the finally block will be run.
 
 ---
 
 ## Testing resource initialization
 
-You can test the initialization of a resource by invoking the resource definition. This will run the underlying decorated function.
+You can test the initialization of a resource by constructing it manually. If your resource doesn't require any other resources, you can simply construct the resource class directly.
 
 ```python file=/concepts/resources/resources.py startafter=start_resource_testing endbefore=end_resource_testing
-from dagster import resource
+from dagster._config.structured_config import Resource
 
 
-@resource
-def my_resource(_):
-    return "foo"
+class MyResource(Resource):
+    def get_value(self) -> str:
+        return "foo"
 
 
 def test_my_resource():
-    assert my_resource(None) == "foo"
+    assert MyResource().get_value() == "foo"
 ```
 
-If your resource requires other resources or config, then you can provide a <PyObject object="InitResourceContext" /> object by using the <PyObject object="build_init_resource_context" /> function.
+If your resource requires other resources, then you can pass them as constructor arguments.
 
 ```python file=/concepts/resources/resources.py startafter=start_resource_testing_with_context endbefore=end_resource_testing_with_context
-from dagster import build_init_resource_context, resource
+from dagster._config.structured_config import Resource
 
 
-@resource(required_resource_keys={"foo"}, config_schema={"bar": str})
-def my_resource_requires_context(init_context):
-    return init_context.resources.foo, init_context.resource_config["bar"]
+class StringHolderResource(Resource):
+    value: str
+
+
+class MyResourceRequiresAnother(Resource):
+    foo: StringHolderResource
+    bar: str
 
 
 def test_my_resource_with_context():
-    init_context = build_init_resource_context(
-        resources={"foo": "foo_str"}, config={"bar": "bar_str"}
-    )
-    assert my_resource_requires_context(init_context) == ("foo_str", "bar_str")
-```
-
-If your resource is a context manager, then you can open it as one using python's `with` syntax.
-
-```python file=/concepts/resources/resources.py startafter=start_test_cm_resource endbefore=end_test_cm_resource
-from contextlib import contextmanager
-from dagster import resource
-
-
-@resource
-@contextmanager
-def my_cm_resource(_):
-    yield "foo"
-
-
-def test_cm_resource():
-    with my_cm_resource(None) as initialized_resource:
-        assert initialized_resource == "foo"
-```
-
----
-
-## Initializing resources outside of execution
-
-There are scenarios where you might want to reuse the code written within your resources outside of the context of execution. Consider a case where you have a resource `db_connection`, and you want to use that resource outside of the context of an execution. You can use the <PyObject object="build_resources"/> API to initialize this resource outside of execution.
-
-```python file=/concepts/resources/resources.py startafter=start_build_resources_example endbefore=end_build_resources_example
-from dagster import resource, build_resources
-
-
-@resource
-def the_credentials():
-    ...
-
-
-@resource(required_resource_keys={"credentials"})
-def the_db_connection(init_context):
-    get_the_db_connection(init_context.resources.credentials)
-
-
-def uses_db_connection():
-    with build_resources(
-        {"db_connection": the_db_connection, "credentials": the_credentials}
-    ) as resources:
-        conn = resources.db_connection
-        ...
+    resource = MyResourceRequiresAnother(foo=StringHolderResource("foo"), bar="bar")
+    assert resource.foo.value == "foo"
+    assert resource.bar == "bar"
 ```
 
 ---
@@ -318,18 +228,19 @@ def uses_db_connection():
 Resources can depend upon other resources. Use the `required_resource_keys` parameter of the <PyObject object="resource" decorator/> decorator to specify which resources to depend upon. Access the required resources through the context object provided to the wrapped function.
 
 ```python file=/concepts/resources/resources.py startafter=start_resource_dep_example endbefore=end_resource_dep_example
-from dagster import resource
+from dagster._config.structured_config import Resource
 
 
-@resource
-def credentials():
-    return ("bad_username", "easy_password")
+class Credentials(Resource):
+    username: str
+    password: str
 
 
-@resource(required_resource_keys={"credentials"})
-def client(init_context):
-    username, password = init_context.resources.credentials
-    return Client(username, password)
+class Client(Resource):
+    credentials: Credentials
+
+    def request(self, endpoint: str):
+        ...
 ```
 
 Now, consider an op that will use the `client` resource:
@@ -338,17 +249,48 @@ Now, consider an op that will use the `client` resource:
 from dagster import graph, op
 
 
-@op(required_resource_keys={"client"})
-def get_client(context):
-    return context.resources.client
+@op
+def get_newest_stories(client: Client):
+    return client.request("/stories/new")
 ```
 
-When constructing a job that includes that op, we provide the resource `client`, but also `credentials`, because `client` requires it.
+When we construct a job with our `client`-utilizing op, we specify the `client` resource to our <PyObject object="Definitions" /> object. This in turn depends on a constructed `Credentials` resource.
 
 ```python file=/concepts/resources/resources.py startafter=start_resource_dep_job endbefore=end_resource_dep_job
-@job(resource_defs={"credentials": credentials, "client": client})
+credentials = Credentials(username="foo", password="bar")
+
+
+@job
 def connect():
-    get_client()
+    get_newest_stories()
+
+
+defs = Definitions(
+    jobs=[connect],
+    resources={
+        "client": Client(credentials=credentials),
+    },
+)
+```
+
+If we instead would like the configuration for our credentials to be provided at runtime, we can use the `configure_at_launch()` method to defer the construction of the `Credentials` resource until runtime. In this case, we must also specify the `credentials` resource to our `Definitions` object so it will appear in the launchpad.
+
+```python file=/concepts/resources/resources.py startafter=start_resource_dep_job_runtime endbefore=end_resource_dep_job_runtime
+credentials = Credentials.configure_at_launch()
+
+
+@job
+def connect():
+    get_newest_stories()
+
+
+defs = Definitions(
+    jobs=[connect],
+    resources={
+        "credentials": credentials,
+        "client": Client(credentials=credentials),
+    },
+)
 ```
 
 ---
